# soundcam_ros

./: .gitignore  CMakeLists.txt  package.xml
action/: Soundcam.action
config/: config.yaml
launch/: soundcam.launch
msg/: Blob.msg  Preset.msg  SoundcamDetection.msg  SoundcamStatus.msg  Test.msg
scripts/: Pipfile  analysis.py  broadcast_test.py  config.py  extras.md  file.pkl  file_mat.pkl  file_mat2.pkl  gui_tst.py  index.html  issue.md  meta-data.yaml  soundcam_async.py  soundcam_async2.py  soundcam_async_client.py  soundcam_connector.py  soundcam_protocol.py  soundcam_ros.py  soundcam_ros_node.py  soundcam_streamer.py  tst_action_srvr.py  utils.py  utils_ROS.py  whitenoise_mat_t1.pkl  whitenoise_mat_t2.pkl
scripts/test/: test.py  tst_action_srvr.py
scripts/virt-device-setup/: install.sh
srv/: SoundcamService.srv
